// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[SelectBox] render test should adjust duration of animation depends on rotateDuration props value 1`] = `
<View
  style={
    Object {
      "zIndex": 999,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderLeftWidth": 1,
            "borderRightWidth": 1,
            "borderTopWidth": 1,
            "flexDirection": "row",
            "height": 30,
            "justifyContent": "center",
            "width": 200,
          },
          Array [
            Object {
              "backgroundColor": "white",
              "borderColor": "black",
            },
            undefined,
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
            },
            Object {
              "includeFontPadding": false,
            },
          ]
        }
        testID="selected-value"
      >
        item1
      </Text>
      <View
        style={
          Object {
            "position": "absolute",
            "right": 10,
            "transform": Array [
              Object {
                "rotate": "0deg",
              },
            ],
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Array [
                Object {
                  "color": "black",
                },
                undefined,
              ],
              Object {
                "fontFamily": "IcoMoon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <View />
</View>
`;

exports[`[SelectBox] render test should render without crashing 1`] = `
<View
  style={
    Object {
      "zIndex": 999,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderLeftWidth": 1,
            "borderRightWidth": 1,
            "borderTopWidth": 1,
            "flexDirection": "row",
            "height": 30,
            "justifyContent": "center",
            "width": 200,
          },
          Array [
            Object {
              "backgroundColor": "white",
              "borderColor": "black",
            },
            undefined,
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
            },
            Object {
              "includeFontPadding": false,
            },
          ]
        }
        testID="selected-value"
      >
        item1
      </Text>
      <View
        style={
          Object {
            "position": "absolute",
            "right": 10,
            "transform": Array [
              Object {
                "rotate": "0deg",
              },
            ],
          }
        }
      >
        <Text />
      </View>
    </View>
  </View>
  <View />
</View>
`;

exports[`[SelectBox] render test should rightElement rotate when isRotate is true 1`] = `
<View
  style={
    Object {
      "zIndex": 999,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderLeftWidth": 1,
            "borderRightWidth": 1,
            "borderTopWidth": 1,
            "flexDirection": "row",
            "height": 30,
            "justifyContent": "center",
            "width": 200,
          },
          Array [
            Object {
              "backgroundColor": "white",
              "borderColor": "black",
            },
            undefined,
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
            },
            Object {
              "includeFontPadding": false,
            },
          ]
        }
        testID="selected-value"
      >
        item1
      </Text>
      <View
        style={
          Object {
            "position": "absolute",
            "right": 10,
            "transform": Array [
              Object {
                "rotate": "0deg",
              },
            ],
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Array [
                Object {
                  "color": "black",
                },
                undefined,
              ],
              Object {
                "fontFamily": "IcoMoon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <View />
</View>
`;
